--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "solid-js": "^1.8.7"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@unocss/astro": "^0.58.2",
     "@unocss/postcss": "^0.58.2",
     "@unocss/preset-uno": "^0.58.2",
     "@unocss/reset": "^0.58.2",
     "autoprefixer": "^10.4.16",
-    "markdown-it": "^14.0.0",
     "d3": "^7.8.5",
+    "markdown-it": "^14.0.0",
     "motion": "^10.16.4",
     "sanitize-html": "^2.11.0",
-    "unocss": "^0.58.2",
-    "@types/d3": "^7.4.3"
+    "tailwindcss": "^3.4.1",
+    "unocss": "^0.58.2"
   }
 }
